    * Integrate with pm-utils. Closes: #481766.
    * Improve reliability of dpms-standby module display handling.
    * Add battery-level-polling module, for systems without reliable ACPI
      battery events. Closes: #495208.
  * Recommend ethtool. Closes: #497343.
  * Depend on psmisc. Closes: #497345.
  * Fix lintian warning on pbbuttonsd integration.

 -- Bart Samwel <bart@samwel.tk>  Sun, 25 Jan 2009 22:59:46 +0100

laptop-mode-tools (1.45-1) unstable; urgency=low

  * New upstream version 1.45.
  * New upstream version 1.44:
    * Strip non-numeric suffixes from kernel minor version number.
      Closes: #488950.
    * Remove spurious error message on machines that don't have 
      /sys/class/power_supply. Closes: #490167.
    * Fix incorrect path to laptop-mode.conf in the laptop-mode.conf(8)
      manual page. Closes: #488261.
    * Add sched-mc-power-savings module. Closes: #490587.

 -- Bart Samwel <bart@samwel.tk>  Tue, 15 Jul 2008 12:47:01 +0200

laptop-mode-tools (1.43-1) unstable; urgency=low

  * New upstream version 1.43:
    * Don't use temp file in init script, that doesn't work if /tmp is
      mounted readonly. Closes: #480946.
    * Fix IPW2100 power management so that power management mode stays
      enabled even on AC. If we don't do this, we can't control the
      transmit power at all because we let the chipset handle it.
      Closes: #481180.
    * Replace *_ENABLE_HAL_POLLING settings by *_DISABLE_HAL_POLLING.
      More intuitive that way. The old settings were also interpreted
      in reverse. The backward compatibility layer actually *fixes that*
      because it was a bug, so behaviour will change for 1.42
      installations. Closes: #482307.
    * Get rid of bashism in laptop-mode module.
  * Put URL on separate line in README. Closes: #486467.
  * Set DM-Upload-Allowed field to yes.
  * Fix bashism in lm-profiler script. Closes: #480606

 -- Bart Samwel <bart@samwel.tk>  Sun, 22 Jun 2008 16:34:17 +0200
