@@ -18,8 +18,10 @@ laptop-mode-tools (1.46-1) unstable; urgency=low
   * Recommend ethtool. Closes: #497343.
   * Depend on psmisc. Closes: #497345.
   * Fix lintian warning on pbbuttonsd integration.
+  * Set proper permissions on directories created for laptop mode tools;
+    relax permissions on installed files so that others can read them.
 
- -- Bart Samwel <bart@samwel.tk>  Sun, 25 Jan 2009 22:59:46 +0100
+ -- Bart Samwel <bart@samwel.tk>  Sun, 25 Jan 2009 23:05:09 +0100
 
 laptop-mode-tools (1.45-1) unstable; urgency=low
 
